# netcfgplugin

./: CMakeLists.txt  LICENSE  README.md  mktests
src/: CMakeLists.txt  farconnect.cpp  fardialog.cpp  fardialog.h  farpanel.cpp  farpanel.h  netcfgarp.cpp  netcfgarp.h  netcfginterfaces.cpp  netcfginterfaces.h  netcfgiproutes.cpp  netcfgiproutes.h  netcfgiptables.cpp  netcfgiptables.h  netcfglng.h  netcfgplugin.cpp  netcfgplugin.h  netcfgroutes.cpp  netcfgroutes.h  netcfgrules.cpp  netcfgrules.h  netfarpanel.cpp  netfarpanel.h  plugincfg.cpp  plugincfg.h
src/common/: errname.c  errname.h  netlink.c  netlink.h  netutils.c  netutils.h
src/configs/plug/: NetcfgBel.lng  NetcfgEng.hlf  NetcfgEng.lng  NetcfgRus.hlf  NetcfgRus.lng
src/netif/: netif.cpp  netif.h  netifs.cpp  netifs.h  netifset.h
src/netroute/: netroute.cpp  netroute.h  netroutes.cpp  netroutes.h  netrouteset.h
